force-app/main/default/objects/Order/fields/Supplier_PO_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Supplier_PO_Date_Sent__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier PO Date Sent</label>
    <type>Date</type>
</CustomField>