force-app/main/default/objects/Order/fields/Supplier_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Sales_Order_Number__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>