force-app/main/default/objects/Order/fields/Supplier_Transport_Purchase_Order_Num_10__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Transport_Purchase_Order_Num_10__c</fullName>
    <label>Supplier Transport Purchase Order Num 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>