force-app/main/default/objects/Order/fields/Supplier_Transport_Purchase_Order_Num_3__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Transport_Purchase_Order_Num_3__c</fullName>
    <description>Created by BDD</description>
    <label>Supplier Transport Purchase Order Num 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>