force-app/main/default/objects/Order/fields/Supply_and_Install__c.field-meta.xml
<CustomField>
    <fullName>Supply_and_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply and Install</label>
    <type>Checkbox</type>
</CustomField>