force-app/main/default/objects/Order/fields/Supply_Install__c.field-meta.xml
<CustomField>
    <fullName>Supply_Install__c</fullName>
    <label>Supply Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply Only</fullName>
            </value>
            <value>
                <fullName>Supply &amp; Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>