force-app/main/default/objects/Order/fields/Supply_Only__c.field-meta.xml
<CustomField>
    <fullName>Supply_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply_Only</label>
    <type>Checkbox</type>
</CustomField>