force-app/main/default/objects/Order/fields/TG_Purchase_Order_Number_10__c.field-meta.xml
<CustomField>
    <fullName>TG_Purchase_Order_Number_10__c</fullName>
    <label>TG Purchase Order Number 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>