force-app/main/default/objects/Order/fields/TG_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>TG_Purchase_Order_Number__c</fullName>
    <description>Created by BDD</description>
    <label>TG Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>