force-app/main/default/objects/Order/fields/TG_Purchase_Order_Uploaded_10__c.field-meta.xml
<CustomField>
    <fullName>TG_Purchase_Order_Uploaded_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TG Purchase Order Uploaded 10</label>
    <type>Checkbox</type>
</CustomField>