force-app/main/default/objects/Order/fields/TG_Purchase_Order_Uploaded_2__c.field-meta.xml
<CustomField>
    <fullName>TG_Purchase_Order_Uploaded_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by BDD</description>
    <label>TG Purchase Order Uploaded 2</label>
    <type>Checkbox</type>
</CustomField>