force-app/main/default/objects/Order/fields/Transport_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_Date__c</fullName>
    <label>Transportation Date</label>
    <type>Date</type>
</CustomField>