force-app/main/default/objects/Order/fields/Transport_Delivery_to_Customer_Notes_10__c.field-meta.xml
<CustomField>
    <fullName>Transport_Delivery_to_Customer_Notes_10__c</fullName>
    <label>Transport/Delivery to Customer Notes 10</label>
    <type>TextArea</type>
</CustomField>