force-app/main/default/objects/Order/fields/Transport_Delivery_to_Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transport_Delivery_to_Customer_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>Transport/Delivery to Customer Notes</label>
    <type>TextArea</type>
</CustomField>