force-app/main/default/objects/Order/fields/Transport_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Transport_Document_Number__c</fullName>
    <label>Transportation Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>