force-app/main/default/objects/Order/fields/Transportation_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Date_10__c</fullName>
    <label>Transportation Date 10</label>
    <type>Date</type>
</CustomField>