force-app/main/default/objects/Order/fields/Transportation_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Date_2__c</fullName>
    <description>Created by BDD</description>
    <label>Transportation Date 2</label>
    <type>Date</type>
</CustomField>