force-app/main/default/objects/Order/fields/Transportation_Document_Number_10__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Document_Number_10__c</fullName>
    <label>Transportation Document Number 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>