force-app/main/default/objects/Order/fields/Transportation_Document_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Document_Number_3__c</fullName>
    <description>Created by BDD</description>
    <label>Transportation Document Number 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>