force-app/main/default/objects/Order/fields/upplier_Approx_Ready_Date_10__c.field-meta.xml
<CustomField>
    <fullName>upplier_Approx_Ready_Date_10__c</fullName>
    <label>upplier Approx. Ready Date 10</label>
    <type>Date</type>
</CustomField>