force-app/main/default/objects/Order/fields/Vendor_Panel__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Panel</label>
    <type>Checkbox</type>
</CustomField>