force-app/main/default/objects/Order/fields/Vendor_Panel_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Panel_Number__c</fullName>
    <description>Created by BDD</description>
    <label>Vendor Panel Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>