force-app/main/default/objects/Order/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <label>Non Customer Account</label>
</RecordType>