force-app/main/default/objects/Order/validationRules/Date_Issued_and_Approved_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Issued_and_Approved_required</fullName>
    <active>true</active>
    <description>Created by BDD</description>
    <errorConditionFormula>ISPICKVAL( Status, &apos;Awaiting Feedback&apos;) &amp;&amp; (ISBLANK(  Date_Issued__c ) || ISBLANK( Date_Approved__c   ))</errorConditionFormula>
    <errorDisplayField>Date_Issued__c</errorDisplayField>
    <errorMessage>Date Issued and Date Approved is required</errorMessage>
</ValidationRule>