force-app/main/default/objects/Order/validationRules/Fill_Before_Order_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Before_Order_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Order Complete&quot;),
    OR(
        ISBLANK(Follow_Up_Date__c),
        ISBLANK(Customer_Feedback_Notes__c),
        ISPICKVAL(Feedback_Type__c, &quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Follow Up Date, Feedback Type, Customer Feedback Notes - required before Complete the Order</errorMessage>
</ValidationRule>