force-app/main/default/objects/Order/validationRules/Order_Main_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Main_Fields_Required</fullName>
    <active>true</active>
    <description>Created by BDD</description>
    <errorConditionFormula>ISPICKVAL( Status, &apos;Awaiting Feedback&apos;) &amp;&amp; ISBLANK( Purchase_Order_Date_Sent__c )</errorConditionFormula>
    <errorDisplayField>Purchase_Order_Date_Sent__c</errorDisplayField>
    <errorMessage>Purchase Order Date Sent is required</errorMessage>
</ValidationRule>