force-app/main/default/objects/Order/validationRules/Quote_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_is_required</fullName>
    <active>true</active>
    <description>Created by BDD</description>
    <errorConditionFormula>ISPICKVAL( Status, &apos;Awaiting Feedback&apos;) &amp;&amp; ISBLANK(Parent_Quote__c )</errorConditionFormula>
    <errorDisplayField>Parent_Quote__c</errorDisplayField>
    <errorMessage>Quote is required</errorMessage>
</ValidationRule>