force-app/main/default/objects/Order/listViews/All_Orders_Without_Feedback.listView-meta.xml
<ListView>
    <fullName>All_Orders_Without_Feedback</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feedback_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Orders Without Feedback</label>
</ListView>